# FuncProject

./: README.md  gitignore  json-parser.cabal  output.txt  parser.hs
app/: Lexer.hs  Lexer.x  Parser.hs  Utils.hs  main.hs  parser.hs  parsertest.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
json_files/: test.json  test2.json  test3.json  test4.json
