cabal-version:      2.4
name:               json-parser
version:            0.1.0.0


extra-source-files: CHANGELOG.md,
                    app/Lexer.x

executable json-parser
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    other-modules:       Lexer,
                         Parser,
                         Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:       base >= 4.14 && < 4.18,
                         array ^>=0.5.4.0,
                         mtl ^>=2.2.2,
                         transformers ^>=0.5.6.2,
    build-tool-depends:  alex:alex
    hs-source-dirs:      app
    default-language:    Haskell2010
